## $Id: Makefile.am 294 2002-02-20 19:05:08Z dugsong $

include_HEADERS = dnet.h

dnetincludedir = $(includedir)/dnet

dnetinclude_HEADERS = dnet/addr.h \
                      dnet/arp.h \
                      dnet/blob.h \
                      dnet/eth.h \
                      dnet/fw.h \
                      dnet/icmp.h \
                      dnet/icmpv6.h \
                      dnet/intf.h \
                      dnet/ip.h \
                      dnet/ip6.h \
                      dnet/os.h \
                      dnet/rand.h \
                      dnet/route.h \
                      dnet/tcp.h \
                      dnet/tun.h \
                      dnet/udp.h \
                      dnet/sctp.h

EXTRA_DIST = err.h queue.h
