## $Id: Makefile.am 294 2002-02-20 19:05:08Z dugsong $

include_HEADERS = dumbnet.h

dumbnetincludedir = $(includedir)/dumbnet

dumbnetinclude_HEADERS = dumbnet/addr.h \
                      dumbnet/arp.h \
                      dumbnet/blob.h \
                      dumbnet/eth.h \
                      dumbnet/fw.h \
                      dumbnet/icmp.h \
                      dumbnet/icmpv6.h \
                      dumbnet/intf.h \
                      dumbnet/ip.h \
                      dumbnet/ip6.h \
                      dumbnet/os.h \
                      dumbnet/rand.h \
                      dumbnet/route.h \
                      dumbnet/tcp.h \
                      dumbnet/tun.h \
                      dumbnet/udp.h \
                      dumbnet/sctp.h

EXTRA_DIST = err.h queue.h
